--- a/org-dotemacs.org
+++ b/org-dotemacs.org
@@ -1,26 +1,57 @@
 #+TITLE: dot emacs
 
 * Examples/Inspiration
-
 - [[http://pages.sachachua.com/.emacs.d/Sacha.html]]
-
+- [[https://github.com/howardabrams/dot-files]]
+* Setup
+To tangle this file us C-c C-v t. Then use code like this to load it from .emacs or .emacs.d/init.el:
+#+BEGIN_SRC elisp
+  (add-to-list 'load-path "~/git/dotemacs/")
+  (load-file "~/git/dotemacs/org-dotemacs.elisp")
+#+END_SRC
+Maybe we can simplify the process by tangling automatically like here [[https://github.com/srunnels/emacs-config/blob/master/init.el]].
 * Starting up
-
 #+BEGIN_SRC elisp :tangle yes
-(package-initialize)
+  (package-initialize)
 #+END_SRC
-
-* Personal information
-
-#+BEGIN_SRC elisp :tangle yes
-(setq user-full-name "Stefan Bischof"
-      user-mail-address "stefan@stefanbischof.at")
-#+END_SRC
-
 * Package sources
-
 #+BEGIN_SRC elisp :tangle yes
-(require 'package) ;; You might already have this line
-(add-to-list 'package-archives
-             '("melpa" . "https://melpa.org/packages/"))
+  (require 'package)
+  (add-to-list 'package-archives
+               '("melpa" . "https://melpa.org/packages/")
+               '("org" . "http://orgmode.org/elpa/"))
+  (when (< emacs-major-version 24)
+    ;; For important compatibility libraries like cl-lib
+    (add-to-list 'package-archives '("gnu" . "http://elpa.gnu.org/packages/")))
+  (package-initialize)
+#+END_SRC
+* Org mode
+#+BEGIN_SRC elisp :tangle yes
+  (require 'org-bullets)
+  (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
+  (define-key global-map "\C-cc" 'org-capture)
+  (setq org-src-fontify-natively t
+        org-agenda-files (list "~/git/personal/siemens.org"
+                                 "~/git/personal/phd.org" 
+                                 "~/git/personal/private.org"))
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((sparql . t)))
+
+#+END_SRC
+** TODO link the org files from windows
+* Auctex
+#+BEGIN_SRC elisp :tangle yes
+  (when (memq window-system '(mac ns))
+    (exec-path-from-shell-initialize))
+#+END_SRC
+* Appearance
+#+BEGIN_SRC elisp :tangle yes
+  ;; font size
+  (set-face-attribute 'default nil :height 120)
+  ;; line spacing
+  (setq-default line-spacing 2)
+  (load-theme 'monokai t)
+  (tool-bar-mode -1)
+  (require 'smart-mode-line)
 #+END_SRC
